layout bug fixed

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,6 +7,9 @@
 html , body , #__next{
     height: 100%;
 }
+body{
+    overflow-y: scroll;
+}
 a {
     text-decoration: none;
     color: inherit;
